Fixing alignment of text in labels.

--- a/components/corespring/ordering/src/client/styles.less
+++ b/components/corespring/ordering/src/client/styles.less
@@ -1,5 +1,9 @@
 @import '../../../../../less/common';
 
+.choice-area-label, .answer-area-label{
+  display: table-cell;
+  vertical-align: middle;
+}
 .view-placement-ordering {
 
   .choice-area {
@@ -136,6 +140,7 @@
   .choice-area-label, .answer-area-label {
     height: 50px;
     overflow: hidden;
+    text-align: center;
   }
 
   &.main-table.vertical {
@@ -239,6 +244,7 @@
       }
       .answer-area-table {
         width: 100%;
+        height: 100% !important;
         max-width: 585px;
       }
     }
